PanelHeader: fixed css bug with android search z-index

--- a/src/components/PanelHeader/PanelHeader.css
+++ b/src/components/PanelHeader/PanelHeader.css
@@ -266,7 +266,7 @@
             width: 100%;
             left: 0;
             top: 0;
-            z-index: 2;
+            z-index: 3;
             }
 
 /*
